Updated linkedin & github links

--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
         <div class="btnrow">
           <a class="btn" href="mailto:karam.fatemeh@yahoo.com">karam.fatemeh@yahoo.com</a>
           <!-- Replace # with your real links -->
-          <a class="btn" href="#" target="_blank" rel="noopener">LinkedIn</a>
-          <a class="btn" href="#" target="_blank" rel="noopener">GitHub</a>
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank">LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank">GitHub</a>
         </div>
       </section>
 
@@ -304,3 +304,4 @@
   </script>
 </body>
 </html>
+
