--- a/contacts.html
+++ b/contacts.html
@@ -46,8 +46,8 @@
       <div class="btnrow">
         <a class="btn" href="mailto:karam.fatemeh@yahoo.com">Email</a>
         <!-- Replace # with your real links -->
-        <a class="btn" href="#" target="_blank" rel="noopener">LinkedIn</a>
-        <a class="btn" href="#" target="_blank" rel="noopener">GitHub</a>
+        <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank">LinkedIn</a>
+        <a class="btn" href="https://github.com/FatemehKaram/" target="_blank">GitHub</a>
       </div>
 
       <p class="small" style="margin-top:12px;">
