--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
         </div>
         <div class="btnrow" aria-label="Primary links">
           <!-- Replace # with your real links -->
-          <a class="btn" href="#" target="_blank" rel="noopener">LinkedIn</a>
-          <a class="btn" href="#" target="_blank" rel="noopener">GitHub</a>
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank">LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank">GitHub</a>
           <a class="btn" href="mailto:karam.fatemeh@yahoo.com">Email</a>
         </div>
       </div>
@@ -304,4 +304,5 @@
   </script>
 </body>
 </html>
+
 
