--- a/certifications.html
+++ b/certifications.html
@@ -4,31 +4,233 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Certifications | Fatemeh Karam</title>
+  <meta name="description" content="Certifications and education of Fatemeh Karam." />
+
   <style>
-    :root{--bg:#f4f6f8;--card:#fff;--text:#1f2937;--muted:#4b5563;--line:#e5e7eb;--shadow:0 2px 10px rgba(0,0,0,.08);--radius:14px;--max:980px}
-    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.55}
-    a{color:inherit} .wrap{max-width:var(--max);margin:0 auto;padding:28px 16px 60px}
-    header,.card{background:var(--card);border:1px solid var(--line);box-shadow:var(--shadow);border-radius:var(--radius)}
-    header{padding:22px 18px;margin-bottom:18px}
-    h1{margin:0;font-size:26px} .tagline{margin:6px 0 0;color:var(--muted)}
-    nav{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:14px;padding-top:14px;border-top:1px solid var(--line)}
-    .navlink{text-decoration:none;border:1px solid var(--line);padding:8px 10px;border-radius:999px;background:#fff}
-    .grid{display:grid;grid-template-columns:1fr;gap:14px}
-    .card{padding:18px}
-    h2{margin:0 0 10px;font-size:18px}
-    ul{margin:8px 0 0 18px} li{margin:6px 0}
-    .small{font-size:13px;color:var(--muted)}
-    footer{margin-top:16px;text-align:center;color:var(--muted);font-size:13px}
+    :root{
+      --bg:#f6f7fb;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --line:rgba(229,231,235,.95);
+      --shadow:0 10px 30px rgba(0,0,0,.08);
+      --shadow2:0 16px 40px rgba(0,0,0,.12);
+      --radius:16px;
+      --max:1024px;
+      --focus:rgba(59,130,246,.35);
+      --accent:rgba(147,197,253,.85);
+    }
+
+    body.dark{
+      --bg:#0b1220;
+      --card:rgba(17,24,39,.92);
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --line:rgba(255,255,255,.12);
+      --shadow:0 14px 40px rgba(0,0,0,.45);
+      --shadow2:0 18px 50px rgba(0,0,0,.55);
+      --accent:rgba(59,130,246,.4);
+      --focus:rgba(99,102,241,.4);
+    }
+
+    *{box-sizing:border-box}
+
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      line-height:1.6;
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(238,242,255,.9), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(236,254,255,.8), transparent 60%),
+        var(--bg);
+    }
+    body.dark{
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(59,130,246,.18), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(99,102,241,.14), transparent 60%),
+        var(--bg);
+    }
+
+    a{color:inherit}
+    .wrap{max-width:var(--max); margin:0 auto; padding:34px 16px 72px;}
+
+    header{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:22px 18px;
+      margin-bottom:16px;
+      backdrop-filter: blur(10px);
+    }
+
+    .top{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
+      flex-wrap:wrap;
+    }
+
+    h1{
+      margin:0;
+      font-size:30px;
+      letter-spacing:-0.35px;
+      line-height:1.15;
+    }
+
+    .tagline{
+      margin:8px 0 0;
+      color:var(--muted);
+      font-size:15px;
+    }
+
+    .small{font-size:13px; color:var(--muted)}
+    .muted{color:var(--muted)}
+
+    nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-top:14px;
+      padding-top:14px;
+      border-top:1px solid var(--line);
+    }
+
+    .navlink{
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:8px 10px;
+      border-radius:999px;
+      background:rgba(255,255,255,.75);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, border-color .12s ease;
+    }
+    body.dark .navlink{background:rgba(255,255,255,.06)}
+    .navlink:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+    .navlink[aria-current="page"]{
+      border-color: var(--accent);
+      box-shadow: 0 10px 20px rgba(0,0,0,.10);
+      font-weight:700;
+    }
+
+    .grid{display:grid; grid-template-columns:1fr; gap:14px;}
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:18px;
+      backdrop-filter: blur(10px);
+      transition: transform .14s ease, box-shadow .14s ease, border-color .14s ease;
+    }
+    .card:hover{
+      transform: translateY(-2px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(147,197,253,.55);
+    }
+    body.dark .card:hover{border-color: rgba(99,102,241,.35)}
+
+    h2{margin:0 0 10px; font-size:20px; letter-spacing:-0.2px}
+    p{margin:0 0 10px}
+    ul{margin:8px 0 0 18px}
+    li{margin:6px 0}
+
+    .btnrow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:10px;
+      justify-content:flex-end;
+    }
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:10px 12px;
+      border-radius:12px;
+      background:rgba(255,255,255,.8);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
+      cursor:pointer;
+    }
+    body.dark .btn{background:rgba(255,255,255,.06)}
+    .btn:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+
+    .btn:focus, .navlink:focus{
+      outline:3px solid var(--focus);
+      outline-offset:2px;
+    }
+
+    .pillrow{display:flex; gap:8px; flex-wrap:wrap; margin-top:10px}
+
+    .chip{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.7);
+      color:var(--muted);
+      font-size:13px;
+    }
+    body.dark .chip{background:rgba(255,255,255,.06)}
+
+    /* reveal animation */
+    .reveal{
+      opacity:0;
+      transform: translateY(8px);
+      transition: opacity .5s ease, transform .5s ease;
+    }
+    .reveal.show{
+      opacity:1;
+      transform: translateY(0);
+    }
+
+    footer{
+      margin-top:18px;
+      text-align:center;
+      color:var(--muted);
+      font-size:13px;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
 
-    <header>
-      <h1>Certifications & Education</h1>
-      <p class="tagline">Selected training and credentials</p>
+    <header class="reveal">
+      <div class="top">
+        <div>
+          <h1>Certifications & Education</h1>
+          <p class="tagline">Selected training and credentials</p>
+          <div class="pillrow">
+            <span class="chip">🎓 Education</span>
+            <span class="chip">📜 Certifications</span>
+            <span class="chip">🧠 Continuous Learning</span>
+          </div>
+        </div>
 
-      <nav>
+        <div class="btnrow" aria-label="Primary links">
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank" rel="noopener">🔗 LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank" rel="noopener">💻 GitHub</a>
+          <a class="btn" href="mailto:karam.fatemeh@yahoo.com">✉️ Email</a>
+          <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">🌙 Theme</button>
+        </div>
+      </div>
+
+      <nav aria-label="Site navigation">
         <a class="navlink" href="index.html">Home</a>
         <a class="navlink" href="projects.html">Projects</a>
         <a class="navlink" href="experience.html">Experience</a>
@@ -40,7 +242,7 @@
 
     <div class="grid">
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Education</h2>
         <ul>
           <li><strong>M.S. in Cybersecurity</strong> — New York Institute of Technology (NYIT), Vancouver, BC (May 2024)</li>
@@ -48,7 +250,7 @@
         </ul>
       </section>
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Programs & Certificates</h2>
         <ul>
           <li><strong>NPower Canada</strong> — Junior Data Analyst Program (Oct 2025 – Jan 2026)</li>
@@ -59,7 +261,7 @@
         <p class="small">Tip: If you have badge links, you can add them as buttons or images later.</p>
       </section>
 
-      <section class="card">
+      <section class="card reveal">
         <h2>Additional training</h2>
         <ul>
           <li>Dynamic Website Development with PHP & MySQL — Tehran Institute of Technology (Dec 2011)</li>
@@ -71,11 +273,46 @@
 
     </div>
 
-    <footer>
+    <footer class="reveal">
       © <span id="y"></span> Fatemeh Karam · Certifications
     </footer>
 
   </div>
-  <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+
+  <script>
+    // Footer year
+    document.getElementById("y").textContent = new Date().getFullYear();
+
+    // Theme toggle (saved in localStorage)
+    const themeKey = "theme";
+    const savedTheme = localStorage.getItem(themeKey);
+    if (savedTheme === "dark") document.body.classList.add("dark");
+
+    const themeBtn = document.getElementById("themeBtn");
+    if (themeBtn) {
+      const setBtn = () => themeBtn.textContent = document.body.classList.contains("dark") ? "☀️ Theme" : "🌙 Theme";
+      setBtn();
+
+      themeBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        localStorage.setItem(themeKey, document.body.classList.contains("dark") ? "dark" : "light");
+        setBtn();
+      });
+    }
+
+    // Active nav highlighting
+    const here = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll("nav a.navlink").forEach(a => {
+      const target = (a.getAttribute("href") || "").split("/").pop().toLowerCase();
+      if (target === here) a.setAttribute("aria-current", "page");
+    });
+
+    // Reveal animations on scroll
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("show"); });
+    }, { threshold: 0.12 });
+
+    document.querySelectorAll(".reveal").forEach(el => io.observe(el));
+  </script>
 </body>
 </html>
