--- a/experience.html
+++ b/experience.html
@@ -4,39 +4,244 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Experience | Fatemeh Karam</title>
+  <meta name="description" content="Professional experience of Fatemeh Karam." />
+
   <style>
-    :root{--bg:#f4f6f8;--card:#fff;--text:#1f2937;--muted:#4b5563;--line:#e5e7eb;--shadow:0 2px 10px rgba(0,0,0,.08);--radius:14px;--max:980px}
-    *{box-sizing:border-box} body{margin:0;font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;background:var(--bg);color:var(--text);line-height:1.55}
-    a{color:inherit} .wrap{max-width:var(--max);margin:0 auto;padding:28px 16px 60px}
-    header,.card{background:var(--card);border:1px solid var(--line);box-shadow:var(--shadow);border-radius:var(--radius)}
-    header{padding:22px 18px;margin-bottom:18px}
-    .top{display:flex;gap:14px;align-items:flex-start;justify-content:space-between;flex-wrap:wrap}
-    h1{margin:0;font-size:26px} .tagline{margin:6px 0 0;color:var(--muted)}
-    nav{display:flex;gap:10px;flex-wrap:wrap;align-items:center;margin-top:14px;padding-top:14px;border-top:1px solid var(--line)}
-    .navlink{text-decoration:none;border:1px solid var(--line);padding:8px 10px;border-radius:999px;background:#fff}
-    .grid{display:grid;grid-template-columns:1fr;gap:14px}
-    .card{padding:18px}
-    h2{margin:0 0 10px;font-size:18px} h3{margin:14px 0 8px;font-size:16px}
-    ul{margin:8px 0 0 18px} li{margin:6px 0}
-    .small{font-size:13px;color:var(--muted)}
-    footer{margin-top:16px;text-align:center;color:var(--muted);font-size:13px}
+    :root{
+      --bg:#f6f7fb;
+      --card:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --line:rgba(229,231,235,.95);
+      --shadow:0 10px 30px rgba(0,0,0,.08);
+      --shadow2:0 16px 40px rgba(0,0,0,.12);
+      --radius:16px;
+      --max:1024px;
+      --focus:rgba(59,130,246,.35);
+      --accent:rgba(147,197,253,.85);
+    }
+
+    body.dark{
+      --bg:#0b1220;
+      --card:rgba(17,24,39,.92);
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --line:rgba(255,255,255,.12);
+      --shadow:0 14px 40px rgba(0,0,0,.45);
+      --shadow2:0 18px 50px rgba(0,0,0,.55);
+      --accent:rgba(59,130,246,.4);
+      --focus:rgba(99,102,241,.4);
+    }
+
+    *{box-sizing:border-box}
+
+    body{
+      margin:0;
+      font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
+      color:var(--text);
+      line-height:1.6;
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(238,242,255,.9), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(236,254,255,.8), transparent 60%),
+        var(--bg);
+    }
+    body.dark{
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(59,130,246,.18), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(99,102,241,.14), transparent 60%),
+        var(--bg);
+    }
+
+    a{color:inherit}
+    .wrap{max-width:var(--max); margin:0 auto; padding:34px 16px 72px;}
+
+    header{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:22px 18px;
+      margin-bottom:16px;
+      backdrop-filter: blur(10px);
+    }
+
+    .top{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
+      flex-wrap:wrap;
+    }
+
+    h1{
+      margin:0;
+      font-size:30px;
+      letter-spacing:-0.35px;
+      line-height:1.15;
+    }
+
+    .tagline{
+      margin:8px 0 0;
+      color:var(--muted);
+      font-size:15px;
+    }
+
+    .small{font-size:13px; color:var(--muted)}
+    .muted{color:var(--muted)}
+
+    nav{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      align-items:center;
+      margin-top:14px;
+      padding-top:14px;
+      border-top:1px solid var(--line);
+    }
+
+    .navlink{
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:8px 10px;
+      border-radius:999px;
+      background:rgba(255,255,255,.75);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, border-color .12s ease;
+    }
+    body.dark .navlink{background:rgba(255,255,255,.06)}
+    .navlink:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+    .navlink[aria-current="page"]{
+      border-color: var(--accent);
+      box-shadow: 0 10px 20px rgba(0,0,0,.10);
+      font-weight:700;
+    }
+
+    .grid{display:grid; grid-template-columns:1fr; gap:14px;}
+
+    .card{
+      background:var(--card);
+      border:1px solid var(--line);
+      box-shadow:var(--shadow);
+      border-radius:var(--radius);
+      padding:18px;
+      backdrop-filter: blur(10px);
+      transition: transform .14s ease, box-shadow .14s ease, border-color .14s ease;
+    }
+    .card:hover{
+      transform: translateY(-2px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(147,197,253,.55);
+    }
+    body.dark .card:hover{border-color: rgba(99,102,241,.35)}
+
+    h2{margin:0 0 10px; font-size:20px; letter-spacing:-0.2px}
+    h3{margin:14px 0 8px; font-size:16px}
+    p{margin:0 0 10px}
+    ul{margin:8px 0 0 18px}
+    li{margin:6px 0}
+
+    .btnrow{
+      display:flex;
+      gap:10px;
+      flex-wrap:wrap;
+      margin-top:10px;
+      justify-content:flex-end;
+    }
+
+    .btn{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      text-decoration:none;
+      border:1px solid var(--line);
+      padding:10px 12px;
+      border-radius:12px;
+      background:rgba(255,255,255,.8);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
+      cursor:pointer;
+    }
+    body.dark .btn{background:rgba(255,255,255,.06)}
+    .btn:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+
+    .btn:focus, .navlink:focus{
+      outline:3px solid var(--focus);
+      outline-offset:2px;
+    }
+
+    .pillrow{display:flex; gap:8px; flex-wrap:wrap; margin-top:10px}
+    .chip{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.7);
+      color:var(--muted);
+      font-size:13px;
+    }
+    body.dark .chip{background:rgba(255,255,255,.06)}
+
+    /* reveal animation */
+    .reveal{
+      opacity:0;
+      transform: translateY(8px);
+      transition: opacity .5s ease, transform .5s ease;
+    }
+    .reveal.show{
+      opacity:1;
+      transform: translateY(0);
+    }
+
+    /* job block formatting */
+    .job{
+      border:1px solid var(--line);
+      border-radius:14px;
+      padding:14px;
+      background:rgba(255,255,255,.55);
+      margin-top:12px;
+    }
+    body.dark .job{background:rgba(255,255,255,.05)}
+    .meta{font-size:13px; color:var(--muted); margin:6px 0 10px}
+
+    footer{
+      margin-top:18px;
+      text-align:center;
+      color:var(--muted);
+      font-size:13px;
+    }
   </style>
 </head>
+
 <body>
   <div class="wrap">
 
-    <header>
+    <header class="reveal">
       <div class="top">
         <div>
           <h1>Experience</h1>
           <p class="tagline">Portfolio-style highlights</p>
+          <div class="pillrow">
+            <span class="chip">🧰 IT Support</span>
+            <span class="chip">🗄️ Backend + Databases</span>
+            <span class="chip">🖥️ Linux + Windows</span>
+          </div>
         </div>
-        <div>
-          <a class="navlink" href="index.html">Back to Home</a>
+
+        <div class="btnrow" aria-label="Primary links">
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank" rel="noopener">🔗 LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank" rel="noopener">💻 GitHub</a>
+          <a class="btn" href="mailto:karam.fatemeh@yahoo.com">✉️ Email</a>
+          <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">🌙 Theme</button>
         </div>
       </div>
 
-      <nav>
+      <nav aria-label="Site navigation">
         <a class="navlink" href="index.html">Home</a>
         <a class="navlink" href="projects.html">Projects</a>
         <a class="navlink" href="experience.html">Experience</a>
@@ -48,45 +253,90 @@
 
     <div class="grid">
 
-      <section class="card">
-        <h2>IT Support Specialist</h2>
-        <p class="small">Boomerang Rayaneh Company · Tehran, Iran · Sep 2019 – Jul 2022</p>
-        <ul>
-          <li>Improved virtualization resource allocation and system provisioning; reduced setup time by ~25%.</li>
-          <li>Coordinated updates, security patches, and backups, reducing downtime and improving stability.</li>
-          <li>Applied ITSM best practices for troubleshooting, escalation, and documentation, reducing repeat incidents.</li>
-          <li>Collaborated with internal teams and vendors to deliver upgrades with minimal disruption.</li>
-        </ul>
-      </section>
+      <section class="card reveal">
+        <h2>Professional Experience</h2>
+        <p class="muted">A focused summary of roles and impact. Full details are available on my resume.</p>
 
-      <section class="card">
-        <h2>Web Developer & Database Administrator</h2>
-        <p class="small">Boomerang Rayaneh Company · Tehran, Iran · Mar 2011 – Sep 2019</p>
-        <ul>
-          <li>Built and maintained PHP/MySQL web applications; improved performance through indexing and query tuning.</li>
-          <li>Optimized MySQL by analyzing slow queries, revising inefficient SQL, and tuning server settings.</li>
-          <li>Deployed and managed Linux servers, improving reliability and uptime through monitoring and optimization.</li>
-          <li>Delivered technical training and documentation to support strong handoffs and team productivity.</li>
-        </ul>
-      </section>
+        <div class="job">
+          <h3>IT Support Specialist</h3>
+          <div class="meta">Boomerang Rayaneh Company · Tehran, Iran · Sep 2019 – Jul 2022</div>
+          <ul>
+            <li>Improved virtualization resource allocation and system provisioning; reduced setup time by ~25%.</li>
+            <li>Coordinated updates, security patches, and backups, reducing downtime and improving stability.</li>
+            <li>Applied ITSM best practices for troubleshooting, escalation, and documentation, reducing repeat incidents.</li>
+            <li>Collaborated with internal teams and vendors to deliver upgrades with minimal disruption.</li>
+          </ul>
+        </div>
 
-      <section class="card">
-        <h2>IT Technician</h2>
-        <p class="small">Arayeh Negar Pishrow Company · Tehran, Iran · Jul 2005 – Feb 2008</p>
-        <ul>
-          <li>Supported IT system upgrades and software deployments.</li>
-          <li>Created troubleshooting and setup documentation to reduce repeated requests.</li>
-          <li>Provided technical support to employees and assisted with vendor coordination.</li>
-        </ul>
+        <div class="job">
+          <h3>Web Developer & Database Administrator</h3>
+          <div class="meta">Boomerang Rayaneh Company · Tehran, Iran · Mar 2011 – Sep 2019</div>
+          <ul>
+            <li>Built and maintained PHP/MySQL web applications; improved performance through indexing and query tuning.</li>
+            <li>Optimized MySQL by analyzing slow queries, revising inefficient SQL, and tuning server settings.</li>
+            <li>Deployed and managed Linux servers, improving reliability and uptime through monitoring and optimization.</li>
+            <li>Delivered technical training and documentation to support strong handoffs and team productivity.</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <h3>IT Technician</h3>
+          <div class="meta">Arayeh Negar Pishrow Company · Tehran, Iran · Jul 2005 – Feb 2008</div>
+          <ul>
+            <li>Supported IT system upgrades and software deployments.</li>
+            <li>Created troubleshooting and setup documentation to reduce repeated requests.</li>
+            <li>Provided technical support to employees and assisted with vendor coordination.</li>
+          </ul>
+        </div>
+
+        <div class="btnrow" style="justify-content:flex-start;">
+          <a class="btn" href="resume.html">📄 View resume page</a>
+          <a class="btn" href="resume.pdf" target="_blank" rel="noopener">⬇️ Download resume (PDF)</a>
+        </div>
       </section>
 
     </div>
 
-    <footer>
+    <footer class="reveal">
       © <span id="y"></span> Fatemeh Karam · Experience
     </footer>
 
   </div>
-  <script>document.getElementById("y").textContent = new Date().getFullYear();</script>
+
+  <script>
+    // Footer year
+    document.getElementById("y").textContent = new Date().getFullYear();
+
+    // Theme toggle (saved in localStorage)
+    const themeKey = "theme";
+    const savedTheme = localStorage.getItem(themeKey);
+    if (savedTheme === "dark") document.body.classList.add("dark");
+
+    const themeBtn = document.getElementById("themeBtn");
+    if (themeBtn) {
+      const setBtn = () => themeBtn.textContent = document.body.classList.contains("dark") ? "☀️ Theme" : "🌙 Theme";
+      setBtn();
+
+      themeBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        localStorage.setItem(themeKey, document.body.classList.contains("dark") ? "dark" : "light");
+        setBtn();
+      });
+    }
+
+    // Active nav highlighting
+    const here = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll("nav a.navlink").forEach(a => {
+      const target = (a.getAttribute("href") || "").split("/").pop().toLowerCase();
+      if (target === here) a.setAttribute("aria-current", "page");
+    });
+
+    // Reveal animations on scroll
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("show"); });
+    }, { threshold: 0.12 });
+
+    document.querySelectorAll(".reveal").forEach(el => io.observe(el));
+  </script>
 </body>
 </html>
