--- a/contact.html
+++ b/contact.html
@@ -4,17 +4,33 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Contact | Fatemeh Karam</title>
+  <meta name="description" content="Contact Fatemeh Karam." />
 
   <style>
     :root{
-      --bg:#f4f6f8;
+      --bg:#f6f7fb;
       --card:#ffffff;
-      --text:#1f2937;
-      --muted:#4b5563;
-      --line:#e5e7eb;
-      --shadow:0 2px 10px rgba(0,0,0,.08);
-      --radius:14px;
-      --max:980px;
+      --text:#111827;
+      --muted:#6b7280;
+      --line:rgba(229,231,235,.95);
+      --shadow:0 10px 30px rgba(0,0,0,.08);
+      --shadow2:0 16px 40px rgba(0,0,0,.12);
+      --radius:16px;
+      --max:1024px;
+      --focus:rgba(59,130,246,.35);
+      --accent:rgba(147,197,253,.85);
+    }
+
+    body.dark{
+      --bg:#0b1220;
+      --card:rgba(17,24,39,.92);
+      --text:#e5e7eb;
+      --muted:#9ca3af;
+      --line:rgba(255,255,255,.12);
+      --shadow:0 14px 40px rgba(0,0,0,.45);
+      --shadow2:0 18px 50px rgba(0,0,0,.55);
+      --accent:rgba(59,130,246,.4);
+      --focus:rgba(99,102,241,.4);
     }
 
     *{box-sizing:border-box}
@@ -22,18 +38,22 @@
     body{
       margin:0;
       font-family:system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
-      background:var(--bg);
       color:var(--text);
-      line-height:1.55;
+      line-height:1.6;
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(238,242,255,.9), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(236,254,255,.8), transparent 60%),
+        var(--bg);
+    }
+    body.dark{
+      background:
+        radial-gradient(1200px 600px at 10% 0%, rgba(59,130,246,.18), transparent 60%),
+        radial-gradient(1200px 600px at 90% 0%, rgba(99,102,241,.14), transparent 60%),
+        var(--bg);
     }
 
     a{color:inherit}
-
-    .wrap{
-      max-width:var(--max);
-      margin:0 auto;
-      padding:28px 16px 60px;
-    }
+    .wrap{max-width:var(--max); margin:0 auto; padding:34px 16px 72px;}
 
     header{
       background:var(--card);
@@ -41,11 +61,33 @@
       box-shadow:var(--shadow);
       border-radius:var(--radius);
       padding:22px 18px;
-      margin-bottom:18px;
+      margin-bottom:16px;
+      backdrop-filter: blur(10px);
     }
 
-    h1{margin:0;font-size:26px}
-    .tagline{margin:6px 0 0;color:var(--muted)}
+    .top{
+      display:flex;
+      gap:14px;
+      align-items:flex-start;
+      justify-content:space-between;
+      flex-wrap:wrap;
+    }
+
+    h1{
+      margin:0;
+      font-size:30px;
+      letter-spacing:-0.35px;
+      line-height:1.15;
+    }
+
+    .tagline{
+      margin:8px 0 0;
+      color:var(--muted);
+      font-size:15px;
+    }
+
+    .small{font-size:13px; color:var(--muted)}
+    .muted{color:var(--muted)}
 
     nav{
       display:flex;
@@ -62,8 +104,21 @@
       border:1px solid var(--line);
       padding:8px 10px;
       border-radius:999px;
-      background:#fff;
+      background:rgba(255,255,255,.75);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease, border-color .12s ease;
     }
+    body.dark .navlink{background:rgba(255,255,255,.06)}
+    .navlink:hover{
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+    }
+    .navlink[aria-current="page"]{
+      border-color: var(--accent);
+      box-shadow: 0 10px 20px rgba(0,0,0,.10);
+      font-weight:700;
+    }
+
+    .grid{display:grid; grid-template-columns:1fr; gap:14px;}
 
     .card{
       background:var(--card);
@@ -71,33 +126,74 @@
       box-shadow:var(--shadow);
       border-radius:var(--radius);
       padding:18px;
+      backdrop-filter: blur(10px);
+      transition: transform .14s ease, box-shadow .14s ease, border-color .14s ease;
     }
+    .card:hover{
+      transform: translateY(-2px);
+      box-shadow: var(--shadow2);
+      border-color: rgba(147,197,253,.55);
+    }
+    body.dark .card:hover{border-color: rgba(99,102,241,.35)}
+
+    h2{margin:0 0 10px; font-size:20px; letter-spacing:-0.2px}
+    p{margin:0 0 10px}
 
     .btnrow{
       display:flex;
-      gap:12px;
+      gap:10px;
       flex-wrap:wrap;
-      margin-top:14px;
+      margin-top:10px;
+      justify-content:flex-end;
     }
 
     .btn{
-      display:inline-block;
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
       text-decoration:none;
       border:1px solid var(--line);
-      padding:10px 14px;
-      border-radius:10px;
-      background:#fff;
-      font-weight:500;
+      padding:10px 12px;
+      border-radius:12px;
+      background:rgba(255,255,255,.8);
+      transition: transform .12s ease, box-shadow .12s ease, background .12s ease;
+      cursor:pointer;
+      font-weight:600;
     }
-
+    body.dark .btn{background:rgba(255,255,255,.06)}
     .btn:hover{
-      background:#f9fafb;
+      transform: translateY(-1px);
+      box-shadow: 0 10px 20px rgba(0,0,0,.08);
     }
 
-    .small{
-      font-size:13px;
+    .btn:focus, .navlink:focus{
+      outline:3px solid var(--focus);
+      outline-offset:2px;
+    }
+
+    .pillrow{display:flex; gap:8px; flex-wrap:wrap; margin-top:10px}
+    .chip{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 10px;
+      border-radius:999px;
+      border:1px solid var(--line);
+      background:rgba(255,255,255,.7);
       color:var(--muted);
-      margin-top:12px;
+      font-size:13px;
+    }
+    body.dark .chip{background:rgba(255,255,255,.06)}
+
+    /* reveal animation */
+    .reveal{
+      opacity:0;
+      transform: translateY(8px);
+      transition: opacity .5s ease, transform .5s ease;
+    }
+    .reveal.show{
+      opacity:1;
+      transform: translateY(0);
     }
 
     footer{
@@ -110,17 +206,29 @@
 </head>
 
 <body>
-
   <div class="wrap">
 
-    <!-- HEADER -->
-    <header>
+    <header class="reveal">
+      <div class="top">
+        <div>
+          <h1>Contact</h1>
+          <p class="tagline">Let’s connect 👋</p>
+          <div class="pillrow">
+            <span class="chip">📧 Email</span>
+            <span class="chip">🔗 LinkedIn</span>
+            <span class="chip">💻 GitHub</span>
+          </div>
+        </div>
 
-      <h1>Contact</h1>
-      <p class="tagline">Let’s connect 👋</p>
+        <div class="btnrow" aria-label="Primary links">
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank" rel="noopener">🔗 LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank" rel="noopener">💻 GitHub</a>
+          <a class="btn" href="mailto:karam.fatemeh@yahoo.com">✉️ Email</a>
+          <button class="btn" id="themeBtn" type="button" aria-label="Toggle theme">🌙 Theme</button>
+        </div>
+      </div>
 
-      <!-- NAVIGATION -->
-      <nav>
+      <nav aria-label="Site navigation">
         <a class="navlink" href="index.html">Home</a>
         <a class="navlink" href="projects.html">Projects</a>
         <a class="navlink" href="experience.html">Experience</a>
@@ -128,56 +236,81 @@
         <a class="navlink" href="resume.html">Resume</a>
         <a class="navlink" href="contact.html">Contact</a>
       </nav>
-
     </header>
 
-    <!-- CONTACT CARD -->
-    <section class="card">
+    <div class="grid">
 
-      <p>
-        I’m open to opportunities in data analytics, cybersecurity, backend development,
-        and technical support. If you’d like to discuss a role, collaboration, or networking,
-        feel free to reach out through any of the platforms below.
-      </p>
+      <section class="card reveal">
+        <h2>Reach out</h2>
+        <p>
+          I’m open to opportunities in data analytics, cybersecurity, backend development,
+          and technical support. If you’d like to discuss a role, collaboration, or networking,
+          feel free to reach out through any of the platforms below.
+        </p>
 
-      <!-- BUTTONS -->
-      <div class="btnrow">
+        <div class="btnrow" style="justify-content:flex-start;">
+          <a class="btn" href="mailto:karam.fatemeh@yahoo.com">📧 Email</a>
+          <a class="btn" href="https://www.linkedin.com/in/fatemeh-karam/" target="_blank" rel="noopener">🔗 LinkedIn</a>
+          <a class="btn" href="https://github.com/FatemehKaram/" target="_blank" rel="noopener">💻 GitHub</a>
+        </div>
 
-        <a class="btn"
-           href="mailto:karam.fatemeh@yahoo.com">
-           📧 Email
-        </a>
+        <p class="small">
+          Tip: Recruiters can view my projects and code samples directly on GitHub.
+        </p>
+      </section>
 
-        <a class="btn"
-           href="https://www.linkedin.com/in/fatemeh-karam/"
-           target="_blank">
-           🔗 LinkedIn
-        </a>
+      <section class="card reveal">
+        <h2>Quick links</h2>
+        <p class="muted small">Useful pages to explore next:</p>
+        <div class="btnrow" style="justify-content:flex-start;">
+          <a class="btn" href="projects.html">✨ Projects</a>
+          <a class="btn" href="resume.html">📄 Resume</a>
+          <a class="btn" href="experience.html">🧰 Experience</a>
+        </div>
+      </section>
 
-        <a class="btn"
-           href="https://github.com/FatemehKaram/"
-           target="_blank">
-           💻 GitHub
-        </a>
+    </div>
 
-      </div>
-
-      <p class="small">
-        Tip: Recruiters can view my projects and code samples directly on GitHub.
-      </p>
-
-    </section>
-
-    <!-- FOOTER -->
-    <footer>
+    <footer class="reveal">
       © <span id="y"></span> Fatemeh Karam · Contact
     </footer>
 
   </div>
 
   <script>
+    // Footer year
     document.getElementById("y").textContent = new Date().getFullYear();
-  </script>
 
+    // Theme toggle (saved in localStorage)
+    const themeKey = "theme";
+    const savedTheme = localStorage.getItem(themeKey);
+    if (savedTheme === "dark") document.body.classList.add("dark");
+
+    const themeBtn = document.getElementById("themeBtn");
+    if (themeBtn) {
+      const setBtn = () => themeBtn.textContent = document.body.classList.contains("dark") ? "☀️ Theme" : "🌙 Theme";
+      setBtn();
+
+      themeBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark");
+        localStorage.setItem(themeKey, document.body.classList.contains("dark") ? "dark" : "light");
+        setBtn();
+      });
+    }
+
+    // Active nav highlighting
+    const here = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll("nav a.navlink").forEach(a => {
+      const target = (a.getAttribute("href") || "").split("/").pop().toLowerCase();
+      if (target === here) a.setAttribute("aria-current", "page");
+    });
+
+    // Reveal animations on scroll
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add("show"); });
+    }, { threshold: 0.12 });
+
+    document.querySelectorAll(".reveal").forEach(el => io.observe(el));
+  </script>
 </body>
 </html>
