commented the part of images of the projects

--- a/projects.html
+++ b/projects.html
@@ -382,7 +382,7 @@
         </div>
       </section>
 
-      <section class="card reveal">
+      <!-- <section class="card reveal">
         <h2>Add screenshots (optional)</h2>
         <p class="muted small">
           Create an <code>images/</code> folder in your repo and upload screenshots (PNG/JPG), e.g.
@@ -393,7 +393,7 @@
         <pre style="white-space:pre-wrap;background:rgba(255,255,255,.65);border:1px solid var(--line);border-radius:12px;padding:12px;overflow:auto;">
 &lt;img class="thumb" src="images/threat-intel.png" alt="Threat Intelligence Assistant screenshot" /&gt;
         </pre>
-      </section>
+      </section> -->
 
     </div>
 
